--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body, h1, h2, h3, p, ul, li, a, img, form, input, textarea, button {
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: white;
     background-image: url('https://images.pexels.com/photos/1236044/pexels-photo-1236044.jpeg?cs=srgb&dl=pexels-cedric-1236044.jpg&fm=jpg'); /* URL gambar latar belakang */
     background-size: cover;
     background-position: center center;
