--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ p {
 #projects .container h2,
 #projects .container p,
 #projects .container ul li {
+  background: rgba(0, 0, 0, 0.5);
   color: white; /* Ubah warna teks di bagian Projects menjadi putih */
 }
 
